// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invoke - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Invoke and test deployed agents in Azure AI Foundry. Send messages to prompt and hosted agents, support single-turn and multi-turn conversations, and verify agent readiness.
USE FOR: invoke agent, test agent, send message, run agent, agent conversation, agent chat, agent response, try agent, talk to agent.
DO NOT USE FOR: deploying or creating agents (use deploy skill), containerizing projects or building Docker images (use package skill), Azure Functions (use azure-functions).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "azure",
    "azure-functions",
    "building",
    "chat",
    "container",
    "containerizing",
    "conversation",
    "conversations",
    "creating",
    "deploy",
    "deployed",
    "deploying",
    "docker",
    "foundry",
    "functions",
    "hosted",
    "images",
    "invoke",
    "mcp",
    "message",
    "messages",
    "multi-turn",
    "package",
    "projects",
    "prompt",
    "readiness",
    "response",
    "send",
    "single-turn",
    "skill",
    "support",
    "talk",
    "test",
    "verify",
  ],
  "name": "invoke",
}
`;

exports[`invoke - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "azure",
  "azure-functions",
  "building",
  "chat",
  "container",
  "containerizing",
  "conversation",
  "conversations",
  "creating",
  "deploy",
  "deployed",
  "deploying",
  "docker",
  "foundry",
  "functions",
  "hosted",
  "images",
  "invoke",
  "mcp",
  "message",
  "messages",
  "multi-turn",
  "package",
  "projects",
  "prompt",
  "readiness",
  "response",
  "send",
  "single-turn",
  "skill",
  "support",
  "talk",
  "test",
  "verify",
]
`;
